--- a/PWA/svgomg-twa-master/svgomg-twa-master/app/src/main/res/values/styles.xml
+++ b/PWA/svgomg-twa-master/svgomg-twa-master/app/src/main/res/values/styles.xml
@@ -21,5 +21,11 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:backgroundDimEnabled">false</item>
+
+
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 </resources>
